--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react-dom": "latest",
     "react-icons": "4.4.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "latest",
+    "react-scripts": "5.0.1",
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.0"
+    "react-scripts": "5.0.1",
+    "@types/react": "^18.0",
+    "@types/react-dom": "^18.0"
   },
   "scripts": {
     "start": "react-scripts start",
