--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "@tanstack/react-table": "8.2.6",
-    "react": "latest",
+    "react": "18.0.0",
     "react-beautiful-dnd": "13.1.0",
     "react-custom-roulette": "1.2.0",
     "react-dom": "latest",
     "react-icons": "4.4.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
     "uuid": "8.3.2"
   },
   "devDependencies": {
     "react-scripts": "5.0.1",
-    "@types/react": "^18.0",
-    "@types/react-dom": "^18.0"
+    "@types/react": "latest",
+    "@types/react-dom": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
