--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "18.0.0",
     "react-beautiful-dnd": "13.1.0",
     "react-custom-roulette": "1.2.0",
-    "react-dom": "latest",
+    "react-dom": "18.0.0",
     "react-icons": "4.4.0",
     "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
